Fix jwplayer v6.2.3115 bug - player does not properly reset body overflow attrib after fullscreen

--- a/omeka/themes_lf/ddb/css/spa.css
+++ b/omeka/themes_lf/ddb/css/spa.css
@@ -6128,6 +6128,7 @@ x3d:hover,
 html.fp-enabled,
 .fp-enabled body {
   overflow: hidden;
+  overflow-y: auto;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
@@ -7193,7 +7194,7 @@ audio {
   line-height: 1.555;
 }
 
-.section[data-color-section='white'] .media-meta {
+.section[data-color-section="white"] .media-meta {
   background-color: rgba(0, 0, 0, 0.2);
 }
 
