--- a/omeka/themes_lf/ddb/src/scss/theme.scss
+++ b/omeka/themes_lf/ddb/src/scss/theme.scss
@@ -50,6 +50,7 @@
 html.fp-enabled,
 .fp-enabled body {
   overflow: hidden;
+  overflow-y: auto;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
